crates/analyzer/tests/snapshots/errors__trait_not_in_scope2.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)
---
error: Applicable items exist but are not in scope
   ┌─ compile_errors/trait_not_in_scope2/src/foo.fe:11:6
   │
11 │   fn do() {
   │      ^^ candidate #1 is defined here on trait `DoThing`
   ·
16 │   fn do() {
   │      ^^ candidate #2 is defined here on trait `DoOtherThing`
   │
   = Hint: Bring one of these candidates in scope via `use module_name::trait_name`


